--- a/datarepo/pom.xml
+++ b/datarepo/pom.xml
@@ -19,6 +19,17 @@
             <version>4.11</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.datarepo</groupId>
+            <artifactId>utils</artifactId>
+            <version>1.0</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.datarepo</groupId>
+            <artifactId>datarepo</artifactId>
+            <version>1.0</version>
+        </dependency>
     </dependencies>
 
     <properties>
