--- a/datarepo/pom.xml
+++ b/datarepo/pom.xml
@@ -7,9 +7,12 @@
         <groupId>org.datarepo</groupId>
         <version>1.0</version>
     </parent>
+
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>datarepo</artifactId>
+    <name>org.datarepo.core</name>
+
 
 
     <dependencies>
